# YOLOX

./: README.md  pyproject.toml
src/yolox/: __init__.py
