[project]
name = "yolox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shogo.hasegawa", email = "shogo.hasegawa@ariseanalytics.com" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "ninja>=1.11.1.3",
    "numpy<2",
    "onnx-simplifier==0.3.10",
    "onnx>=1.13.0",
    "opencv-python>=4.10.0.84",
    "psutil>=6.1.0",
    "pycocotools>=2.0.2",
    "setuptools>=75.6.0",
    "tabulate>=0.9.0",
    "tensorboard>=2.18.0",
    "thop>=0.1.1.post2209072238",
    "torch==2.0.1",
    "torchvision",
    "tqdm>=4.67.1",
    "yolox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
